--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,8 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["inject.js"]
+            "js": ["inject.js"],
+            "css": ["direction.css"]
         }
     ],
     "host_permissions": ["<all_urls>"]
