--- a/manifest.json
+++ b/manifest.json
@@ -21,10 +21,18 @@
     },
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
-            "js": ["inject.js"],
-            "css": ["direction.css"]
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "inject.js"
+            ],
+            "css": [
+                "direction.css"
+            ]
         }
     ],
-    "host_permissions": ["<all_urls>"]
+    "host_permissions": [
+        "<all_urls>"
+    ]
 }
